# Conformal_Oracle

./: .gitignore  20260401_CFP_IJF_Paper_R3.tex  20260403_CFP_IJF_Paper_blinded.tex  LICENSE  README.md  calibrating_the_oracle.bib  conformal_backtest_results.csv  download_data.py  fig3_frontier.py  make.sh  requirements.txt  run_all_three_tasks.py  run_conformal_analysis.py  run_simulation_study.py
CFP_Calibration_Efficiency_Frontier/: CFP_Calibration_Efficiency_Frontier.ipynb  CFP_Calibration_Efficiency_Frontier.py  Metainfo.txt  README.md  run_frontier.py
CFP_Capital_Charge/: CFP_Capital_Charge.py  Metainfo.txt  README.md
CFP_ES_Correction_Z2/: CFP_ES_Correction_Z2.ipynb  CFP_ES_Correction_Z2.py  (+3 more)
python/: CHANGELOG.md  LICENSE  PUBLISH_LOG.md  README.md  pyproject.toml
python/docs/: api.md  conventions.md  methodology.md  migration_v0.3.md
python/examples/: 01_audit_static_garch.py  02_audit_rolling_garch.py  03_audit_with_benchmarks.py  04_custom_forecaster.py
python/examples/notebooks/: agnostic_custom_forecast.ipynb  quickstart_sp500.ipynb  reproduce_table4_full.ipynb
python/src/conformal_oracle/: __init__.py  _conventions.py  _deprecated.py  _protocols.py  _types.py  classify.py  compare.py
python/src/conformal_oracle/audit/: __init__.py  benchmark.py  regime.py  single_rolling.py  single_static.py
python/src/conformal_oracle/conformal/: __init__.py  bootstrap.py  rolling.py  static.py
python/src/conformal_oracle/contrib/: __init__.py
python/src/conformal_oracle/contrib/benchmarks/: __init__.py  garch_normal.py
python/src/conformal_oracle/contrib/tsfm/: __init__.py  _cache.py  chronos.py  lag_llama.py  moirai.py  timesfm.py
python/src/conformal_oracle/diagnostics/: __init__.py  acerbi_szekely.py  basel.py  christoffersen.py  diebold_mariano.py  kupiec.py  scoring.py
python/src/conformal_oracle/forecasters/: __init__.py  garch_normal.py  gjr_garch.py  hist_sim.py
python/src/conformal_oracle/forecasters/tsfm/: __init__.py  _base.py  chronos.py  lag_llama.py  moirai.py  timesfm.py
python/src/conformal_oracle/panel/: __init__.py  audit.py  cross_sectional.py  diagnostic_regression.py  diebold_mariano.py  kupiec_panel.py  latex.py  result.py  wildcluster_bootstrap.py
python/src/conformal_oracle/recalibration/: __init__.py  aci.py  base.py  evt_pot.py  fhs.py  gamlss_sst.py  gbm_qr.py  historical_quantile.py  quantile_regression.py  scale_correction.py
python/src/conformal_oracle/reporting/: __init__.py  latex.py  plotting.py
python/tests/: conftest.py  test_deprecation.py
python/tests/fixtures/: README.md  forecasters.py  synthetic_returns.csv
python/tests/test_audit/: test_audit_agnostic.py  test_benchmark.py  test_benchmark_dm.py  test_dispatcher.py  test_single_rolling.py  test_single_static.py
python/tests/test_conformal/: test_bootstrap.py  test_rolling.py  test_static.py
python/tests/test_diagnostics/: test_acerbi_szekely.py  test_basel.py  test_christoffersen.py  test_diebold_mariano.py  test_kupiec.py  test_reporting.py  test_scoring.py  test_types_cdf.py
python/tests/test_forecasters/: test_gjr_garch.py  test_hist_sim.py
python/tests/test_integration/: test_end_to_end_rolling.py  test_end_to_end_static.py  test_fz_scores.py  test_qv_stat_ci_zero.py
python/tests/test_panel/: test_audit_panel.py  test_integration.py  test_kupiec_panel.py  test_latex_panel.py  test_master_table.py  test_panel_dm.py  test_t1_diagnostic_regression.py  test_t2_cross_sectional.py  test_t3_wildcluster.py
python/tests/test_recalibration/: test_audit_integration.py  test_conformal_shift.py  test_t10_cross_baseline.py  test_t1_historical_quantile.py  test_t2_scale_correction.py  test_t3_linear_qr.py  test_t4_isotonic_qr.py  test_t5_aci.py  test_t6_gbm_qr.py  test_t7_evt_pot.py  test_t8_fhs.py  test_t9_gamlss.py
python/tests/test_tsfm/: test_base.py  test_cache.py  test_chronos.py  test_guarded_imports.py  test_lag_llama.py  test_moirai.py  test_quantile_grid_tail.py  test_replication.py  test_timesfm.py  test_within_family.py
(+430 files in other folders)
