[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conformal-oracle"
version = "0.3.0"
description = "Conformal recalibration audit for tail quantile forecasters"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Traian Pele", email = "danpele@ase.ro" },
]
keywords = ["conformal prediction", "VaR", "risk management", "backtesting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/QuantLet/Conformal_Oracle"
Repository = "https://github.com/danpele/Conformal_Oracle"
Issues = "https://github.com/danpele/Conformal_Oracle/issues"
Documentation = "https://github.com/danpele/Conformal_Oracle/blob/main/python/docs/api.md"
Changelog = "https://github.com/danpele/Conformal_Oracle/blob/main/python/CHANGELOG.md"

[project.optional-dependencies]
benchmarks = [
    "arch>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "scikit-learn>=1.0",
]
chronos = [
    "chronos-forecasting>=1.5",
    "torch>=2.0",
    "transformers>=4.30",
]
timesfm = [
    "timesfm>=1.2",
    "torch>=2.0",
]
moirai = [
    "uni2ts>=0.1",
    "torch>=2.0",
    "einops>=0.6",
    "gluonts>=0.14",
    "huggingface-hub>=0.20",
]
lag_llama = [
    "torch>=2.0",
    "gluonts>=0.14",
    "huggingface-hub>=0.20",
    "einops>=0.6",
]
tsfm_all = [
    "chronos-forecasting>=1.5",
    "timesfm>=1.2",
    "uni2ts>=0.1",
    "torch>=2.0",
    "transformers>=4.30",
    "gluonts>=0.14",
    "huggingface-hub>=0.20",
    "einops>=0.6",
]
all = [
    "conformal-oracle[benchmarks,tsfm_all]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
# v0.1: non-strict. Strict mode has 16 kwargs-forwarding errors — fix in v0.2.
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
